Migrate to React Router 7 SSR for improved SEO
- Install @react-router/dev and @react-router/node packages
- Create React Router 7 app structure (app/ directory)
- Add react-router.config.ts with SSR enabled
- Update vite.config.ts to use React Router plugin
- Create app/root.tsx with server-side meta tags and structured data
- Migrate routes to React Router 7 format:
  - app/routes/_index.tsx (home)
  - app/routes/contact.tsx
  - app/routes/services..tsx (dynamic routes)
  - app/routes/$.tsx (404 catch-all)
  - app/routes/sitemap[.]xml.ts (dynamic sitemap)
- Create app/entry.client.tsx and app/entry.server.tsx
- Move structured data from client component to server-side rendering
- Add manifest.json for PWA support
- Update package.json scripts for React Router 7
- Create server.js for production Node.js server
- Remove StructuredData import from Layout component

Benefits:
- Meta tags now rendered server-side in initial HTML (better SEO)
- Automatic code splitting per route
- Streaming SSR for better performance
- Enhanced structured data schemas (WebSite, Organization)
- Dynamic sitemap generation

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chiryo Energie - Psycho énergéticienne</title>
-    <meta name="description" content="Votre énergie, votre chemin, l'équilibre à portée de mains. Chiryo Energie offre des services holistiques pour votre bien-être." />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/app/entry.client.tsx"></script>
   </body>
 </html>
